FIX: styles of post with video inside fixed for bug with jump video when scrolling page

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -299,14 +299,23 @@
       .post {
 
         @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-          border-bottom: 1px solid rgba($gray, 0.2);
-          padding-bottom: 8px;
           background-color: $white;
           position: relative;
           max-width: 100vw;
 
           &:last-child {
-            border-bottom: none;
+
+            .post--details {
+              border-bottom: none;
+            }
+          }
+        }
+
+        &-details {
+
+          @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+            padding-bottom: 8px;
+            border-bottom: 1px solid rgba($gray, 0.2);
           }
         }
 
